CHANGELOG

When		Who		What
==================================================================================================================
2016-05-20 	Richard Forth   Fixed a bug with parent pid detected, reported by J. Ramsey - with thanks! 
2016-03-03 	Richard Forth   Added MD5Sums + News Item. 
2016-02-27 	Richard Forth   Added code to display verbose memory usage information, and then bug out with a 
				critical error if ram is overbooked, before we even start (ie no ram left for apache)
2016-02-27 	Richard Forth   Added code to display verbose memory usage information, prior to calculations, 
				as I was trying to solve the mystery of negative percentages. 
				Found that if ram is over booked, this skews the results massively.
2016-02-24 	Richard Forth   Added code to display MaxRequestsPerChild information (prefork mode) 
2016-02-24 	Richard Forth   Fixed bug out code in preflight checks if apache parent is greater than 50MB, as 
				I was notified that this wasnt working on ubuntu 12.04 systems
2016-02-16 	Richard Forth   Added bug out code in preflight checks if apache parent is greater than 50MB, as 
				this skews results and calculations.
2015-10-18 	Richard Forth   Fixed some logic in the Results section. 
2015-10-18 	Richard Forth   Dropped "new and improved!!!" from the logo. Updated the news items. 
2015-10-03 	Richard Forth   Changed Recommendations based on an actual valid range (10% of max). 
				Previously anything below the maximim was considered accpetable. 
				Now there is a minimum (Max / .90) and Max, which is reported in the recommendations.
2015-10-03 	Richard Forth   Changed layout of memory report, as requested by Luke H.
2015-10-03 	Richard Forth   Added detection for if maxClients or MaxRequestWorkers has been hit 
2015-09-25 	Richard Forth   Added Apache current memory consumption to 'Analysing apache memory usage' section 
2015-09-23 	Richard Forth   Added Gluster Memory Detection - Feature Request from P. Steyn